# C_ChessEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app  engine  perft  tBot  unit
chess_app/: AppInit.h  AppState.h  AppStyle.h  EventHandler.h  Events.h  Overlay.h  Render.h  app.c  appInit.c  eventHandler.c  events.c  overlay.c  render.c
cmake_profiles/: CMakeLists.txt-app  CMakeLists.txt-engine  CMakeLists.txt-examineBot  CMakeLists.txt-perft  CMakeLists.txt-unittest
graphics_visualisation/: visualizePieceSquareTable.c
magicGeneration/: Bishop.h  Logging.h  Utils.h  bishop.c  logging.c  magicGeneration.c  utils.c
precomputedMasks/: Rook.h  bishop.c  kingKnightMaskGeneration.c  magicGeneration.c  rook.c  utils.c
src/: ChessBot.h  ChessGameEmulator.h  MoveGenerator.h  UCICommandProcessing.c  UCICommandProcessing.h  chessBot.c  chessComputer.c  chessComputer.h  chessGameEmulator.c  chessGameEmulator.h  entryPoint.c  fenString.c  fenString.h  moveGenerator.c  moveGenerator.h
src/chessBot/: ChessBot.h  PieceSquareTable.h  RepetitionTable.h  TranspositionTable.h  chessBot.c  pieceSquareTable.c  repetitionTable.c  transpositionTable.c
src/engine/: ChessGameEmulator.h  MoveGenerator.h  chessGameEmulator.c  moveGenerator.c
src/magicBitBoard/: Bishop.h  MagicBitBoard.h  Rook.h  bishop.c  magicBitBoard.c  rook.c
src/state/: Board.h  Constants.h  GameState.h  Move.h  Piece.h  ZobristKey.h  board.c  gameState.c  move.c  piece.c  zobristKey.c
src/utils/: CharBuffer.h  Constants.h  DynamicArray.h  FenString.h  Math.h  Types.h  Utils.h  charBuffer.c  fenString.c  fenString.h  utils.c
stockfishUCI/: StockfishAPI.h  stockfishAPI.c
testing/: LogChessStructs.h  chessGameEmulator.c  chessPositions.txt  examineBot.c  logChessStructs.c  logChessStructs.h  perft.c  testChessComputer.c  testFenString.c  testingBoard.c
testing/perft/: PerftTranspositionTable.h  perft.c  perftTranspositionTable.c
testing/unitTest/: TestCharBuffer.h  TestMath.h  TestUtils.h  testBoard.c  testBoard.h  testCharBuffer.c  testFenString.c  testMath.c  testTranspositionTable.c  testUtils.c  unitTest.c
(+8 files in other folders)
